--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
         <h1>Contacto</h1>
         <p>Email: <a href="mailto:nicolas.cano.leal@gmail.com">nicolas.cano.leal@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/nicolas-andres-cano-leal/" target="_blank">Perfil de LinkedIn</a></p>
-        <p>GitHub: <a href="https://github.com/NicolasAndresCL" target="_blank">Perfil de GitHub</a></p>
+        <p>GitHub: <a href="https://NicolasAndresCL.pythonanywhere.com" target="_blank">Perfil de GitHub</a></p>
         <p><a href="/">Volver al inicio</a></p>
 
 {% endblock %}
